# network-config-manager

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  .vimrc  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile  NOTICE.txt  README.md  c-cpp.yml  example-nmctl-display.md  example-yaml-configurations.md  example_configs.md  meson.build  meson_options.txt  semaphore.yml
.github/workflows/: ccpp.yml  network-config-manager.yml
conf/: meson.build
doc/: conf.py  index.rst  meson.build
include/: meson.build  network-config-manager.h  network-config-manager.h.in
src/: 0001-Rename-_cleanup_free-to-_auto_cleanup_.patch  meson.build
src/cli/: cli.c  cli.h
src/ctl/: ctl.c  ctl.h
src/dbus/: dbus.c  dbus.h
src/dns/: dns.c  dns.h
src/dracut/: dracut-parser.c  dracut-parser.h
src/json/: network-json.c  network-json.h  network-link-json.c
src/lib-network/mnl/: mnl_util.c  mnl_util.h
src/lib-network/netlink/: netlink-message.c  netlink-message.h  netlink-missing.h  netlink.c  netlink.h  network-address.c  network-address.h  network-link.c  network-link.h  network-route.c  network-route.h  network-routing-policy-rule.c  network-routing-policy-rule.h
src/lib-network/networkd/: networkd-api.c  networkd-api.h
src/manager/: .netdev.c.swo  1  ctl-display.c  ctl-display.h  ncm-link.c  ncm-netdev.c  ncm-nft.c  ncm-proxy.c  netdev-link.c  netdev-link.h  netdev-manager.c  netdev-manager.h  netdev.c  netdev.h  network-address.c  network-address.h  network-config-manager.c  network-json.c  network-json.h  network-link.c  network-link.h  network-manager-ctl.c  network-manager.c  network-manager.h  network-route.c  network-route.h  network-sriov.c  network-sriov.h  network.c  network.h
src/nftables/: mnl_util.c  mnl_util.h  nft_rule_expr.c  nft_rule_expr.h  nft_util.c  nft_util.h  nftables.c  nftables.h
src/share/: .file-util.c.swo  alloc-util.h  ansi-color.c  ansi-color.h  arphrd-list.c  arphrd-to-name.h  color.c  color.h  config-file.c  config-file.h  config-parser.c  config-parser.h  defines.h  edit.c  edit.h  file-util.c  file-util.h  journal.c  journal.h  log.c  log.h  macros.h  network-util.c  network-util.h  parse-util.c  parse-util.h  set.c  set.h  string-util.c  string-util.h
src/udev/: device.c  device.h  udev-hwdb.c  udev-hwdb.h
src/yaml/: 1  yaml-link-parser.c  yaml-link-parser.h  yaml-manager.c  yaml-manager.h  yaml-netdev-parser.c  yaml-netdev-parser.h  yaml-network-parser.c  yaml-network-parser.h  yaml-parser.c  yaml-parser.h
tests/: network-config-manager-tests.py  network-config-manager-yaml-tests.py
tests/cmocka/: basic.c  set-network.c  set-network.h  shared.c  shared.h  vami-set-network-port.c
tests/yaml/: bond-interface.yml  bond.yaml  bond.yml  bonds.yml  bridge-cost.yaml  bridge.yaml  bridge.yml  bridges.yml  dhcp-client-identifier.yaml  dhcp-overrides.yaml  dhcp-overrides.yml  dhcp-static-dns.yaml  dhcp.yaml  dhcp4-server.yaml  dhcp4.yml  dhcp6-overrides.yaml  gw-onlink.yml  infiband.yaml  ipv6-config.yml  ipv6-ra-overrides.yaml  link-driver.yaml  link.yaml  link.yml  macvlans.yaml  match-driver.yaml  mtu.yaml  multiple-address.yml  multiple-rt.yaml  name-password-wifi-dhcp.yaml  name-password-wifi-static.yaml  network-dhcp-mac.yaml  network-link.yaml  network-link.yml  network-network.yaml  network-network.yml  network-section-dhcp-section.yaml  network-section-dhcp6-section.yaml  network-wifi.yaml  network.yaml  network_set_mac.yaml  (+30 more)
travis/: Dockerfile
units/: meson.build  network-config-manager-generator.service.in  network-config-manager-wpa@.service  network-config-manager-yaml-generator.service.in  wpa_supplicant.conf
