option('version-tag', type : 'string',
       description : 'override the git version string')

option('nftables', type : 'boolean', value : false,
       description : 'enable nftable support')

option('docs', type : 'boolean', value : false,
       description : 'enable  docs')

option('tests', type : 'boolean', value : false,
       description : 'enable tests')
