network_config_manager_yaml_example = configure_file(
                                   input : '99-dhcp.yml.example.in',
                                   output : '99-dhcp.yml.example',
                                   configuration : substs)
                                   install_data(network_config_manager_yaml_example,
                                   install_dir : '/etc/network-config-manager/yaml')
