network_config_manager_sources = files('''
        cli/cli.h
        cli/cli.c
        dbus/dbus.h
        dbus/dbus.c
        dns/dns.h
        dns/dns.c
        dracut/dracut-parser.h
        dracut/dracut-parser.c
        manager/network-link.h
        manager/network-link.c
        manager/network-address.h
        manager/network-address.c
        manager/network-route.h
        manager/network-route.c
        manager/network-config-manager.c
        manager/network-manager.h
        manager/network-manager.c
        manager/network.h
        manager/network.c
        nftables/nftables.h
        nftables/nftables.c
        nftables/mnl_util.h
        nftables/mnl_util.c
        nftables/nft_rule_expr.h
        nftables/nft_rule_expr.c
        share/ansi-color.h
        share/alloc-util.h
        share/arphrd-to-name.h
        share/arphrd-list.c
        share/config-file.h
        share/config-file.c
        share/config-parser.h
        share/config-parser.c
        share/file-util.h
        share/file-util.c
        share/log.h
        share/macros.h
        share/network-util.h
        share/network-util.c
        share/parse-util.h
        share/parse-util.c
        share/set.h
        share/set.c
        share/string-util.h
        share/string-util.c
        lib-network/netlink/netlink.h
        lib-network/netlink/netlink.c
        lib-network/netlink/netlink-message.h
        lib-network/netlink/netlink-message.c
        lib-network/networkd/networkd-api.h
        lib-network/networkd/networkd-api.c
        yaml/yaml-network-parser.h
        yaml/yaml-network-parser.c
        yaml/yaml-parser.c
        yaml/yaml-parser.h
        udev/udev-hwdb.h
        udev/udev-hwdb.c
'''.split())
