network_config_manager_sources = files('''
        ctl/ctl.h
        ctl/ctl.c
        dbus/dbus.h
        dbus/dbus.c
        dns/dns.h
        dns/dns.c
        dracut/dracut-parser.h
        dracut/dracut-parser.c
        json/network-json.h
        json/network-json.c
        json/network-link-json.c
        manager/ctl-display.h
        manager/ctl-display.c
        manager/ncm-nft.c
        manager/ncm-netdev.c
        manager/ncm-proxy.c
        manager/ncm-link.c
        manager/netdev.h
        manager/netdev.c
        manager/netdev-manager.h
        manager/netdev-manager.c
        manager/netdev-link.c
        manager/netdev-link.h
        manager/network-sriov.h
        manager/network-sriov.c
        manager/network-config-manager.c
        manager/network-manager.h
        manager/network-manager.c
        manager/network.h
        manager/network.c
        nftables/nftables.h
        nftables/nftables.c
        nftables/nft_util.h
        nftables/nft_util.c
        share/ansi-color.h
        share/ansi-color.c
        share/alloc-util.h
        share/arphrd-to-name.h
        share/arphrd-list.c
        share/config-file.h
        share/config-file.c
        share/config-parser.h
        share/config-parser.c
        share/edit.h
        share/edit.c
        share/file-util.h
        share/file-util.c
        share/log.h
        share/macros.h
        share/network-util.h
        share/network-util.c
        share/parse-util.h
        share/parse-util.c
        share/set.h
        share/set.c
        share/string-util.h
        share/string-util.c
        lib-network/mnl/mnl_util.h
        lib-network/mnl/mnl_util.c
        lib-network/netlink/netlink-missing.h
        lib-network/netlink/netlink.h
        lib-network/netlink/netlink.c
        lib-network/netlink/netlink-message.h
        lib-network/netlink/netlink-message.c
        lib-network/netlink/network-link.h
        lib-network/netlink/network-link.c
        lib-network/netlink/network-address.h
        lib-network/netlink/network-address.c
        lib-network/netlink/network-route.h
        lib-network/netlink/network-route.c
        lib-network/netlink/network-routing-policy-rule.h
        lib-network/netlink/network-routing-policy-rule.c
        lib-network/networkd/networkd-api.h
        lib-network/networkd/networkd-api.c
        yaml/yaml-manager.c
        yaml/yaml-manager.h
        yaml/yaml-network-parser.h
        yaml/yaml-network-parser.c
        yaml/yaml-link-parser.c
        yaml/yaml-link-parser.h
        yaml/yaml-parser.c
        yaml/yaml-parser.h
        yaml/yaml-netdev-parser.c
        yaml/yaml-netdev-parser.h
        udev/udev-hwdb.h
        udev/udev-hwdb.c
        udev/device.h
        udev/device.c
'''.split())
